--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -10,8 +10,10 @@ jobs:
         uses: actions/checkout@v2
       - name: Linting
         run: |
-          pre-commit run -a
-      - name: unit-tests
-        run: |
-          export HYDRA_FULL_ERROR=1
-          python -m pytest -k "not slow"
+          python3 -m pip install pre-commit
+          python3 -m pre-commit install
+          python3 -m pre-commit run -a
+      # - name: unit-tests
+      #   run: |
+      #     export HYDRA_FULL_ERROR=1
+      #     python -m pytest -k "not slow"
